# SilverBrain

./: .gitignore  CLAUDE.md  README.md  eisenhower-matrix_2.html  index.html  package.json  pnpm-lock.yaml  quick-add.html  tray-popover.html  vite.config.ts
.claude/: launch.json
.cursor/rules/: version-bump-before-commit.mdc
.github/workflows/: static.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  review-diff-braindump-wizard-flow.md  spec-app-restructure-sessions.md  spec-braindump-wizard-flow.md  spec-edit-task-double-click.md  spec-eisenhower-sort-memory.md  spec-github-pages-landing.md  spec-keyboard-shortcuts-layout.md  spec-language-switch-ar-eg.md  spec-native-macos-sidebar-layout.md  spec-past-dumps-load-import.md  spec-pomodoro-notification-sounds.md  spec-pomodoro-shortcuts-tray.md  spec-quick-add-overlay.md  spec-settings-tabs-layout.md  spec-sort-todo-task-actions.md  spec-todo-focus-highlighted-task.md  spec-zen-calm-ui.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
scripts/: gen_icon.py
site/: index.html
src/: config.ts  confirm-dialog.ts  i18n.ts  inline-edit.ts  llm.ts  main.ts  notification-sounds.ts  notifications.ts  quick-add-bridge.ts  quick-add.ts  settings-permissions.ts  store.ts  style.css  theme.ts  toast.ts  tray-popover.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pomodoro-tray.json  quick-add.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/views/: braindump.ts  pomodoro.ts  sort.ts  todo.ts
(+7 files in other folders)
