[package]
name = "silver-brain"
version = "0.2.4"
description = "Brain dump → Eisenhower Matrix → Todo + Pomodoro"
authors = ["Osama Adel"]
edition = "2021"

# Library target consumed by main.rs and the mobile entry points.
[lib]
name = "silver_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }
objc2-foundation = "0.3"
